hotel-booking-web-app/.nodeshift/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: hotel-booking-web-app
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
