hotel-booking-web-app/.nodeshift/route.yml
apiVersion: v1
kind: Route
metadata:
  name: hotel-booking-web-app
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: hotel-booking-web-app
